--- a/package.json
+++ b/package.json
@@ -10,16 +10,18 @@
     "url": "git+https://github.com/Dailoge/demo.git"
   },
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/Dailoge/demo/issues"
   },
   "homepage": "https://github.com/Dailoge/demo#readme",
   "dependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-preset-es2015": "^6.24.1"
+    "@tensorflow/tfjs": "^1.0.0"
   },
   "devDependencies": {
-    "babel-plugin-transform-decorators-legacy": "^1.3.5"
+    "babel-plugin-transform-decorators-legacy": "^1.3.5",
+    "webpack": "^4.29.6",
+    "babel-cli": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1"
   }
 }
