--- a/package.json
+++ b/package.json
@@ -16,7 +16,11 @@
   },
   "homepage": "https://github.com/Dailoge/demo#readme",
   "dependencies": {
-    "@tensorflow/tfjs": "^1.0.0"
+    "@tensorflow/tfjs": "^1.0.0",
+    "eg-tools": "^6.0.3",
+    "gfs-react-dm": "^2.0.13",
+    "gfs-react-tools": "^2.0.9",
+    "phoenix-ui": "^3.5.20"
   },
   "devDependencies": {
     "babel-plugin-transform-decorators-legacy": "^1.3.5",
