--- a/package.json
+++ b/package.json
@@ -1,31 +1,51 @@
 {
-  "name": "test",
-  "version": "1.0.0",
-  "description": "这些测试Demo",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Dailoge/demo.git"
-  },
-  "author": "",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/Dailoge/demo/issues"
-  },
-  "homepage": "https://github.com/Dailoge/demo#readme",
-  "dependencies": {
-    "@tensorflow/tfjs": "^1.0.0",
-    "eg-tools": "^6.0.3",
-    "gfs-react-dm": "^2.0.13",
-    "gfs-react-tools": "^2.0.9",
-    "phoenix-ui": "^3.5.20"
-  },
-  "devDependencies": {
-    "babel-plugin-transform-decorators-legacy": "^1.3.5",
-    "webpack": "^4.29.6",
-    "babel-cli": "^6.26.0",
-    "babel-preset-es2015": "^6.24.1"
-  }
+    "name": "test",
+    "version": "1.0.0",
+    "description": "这些测试Demo",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "start": "node devserver.js"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/Dailoge/demo.git"
+    },
+    "author": "",
+    "license": "MIT",
+    "bugs": {
+        "url": "https://github.com/Dailoge/demo/issues"
+    },
+    "homepage": "https://github.com/Dailoge/demo#readme",
+    "dependencies": {
+        "@tensorflow/tfjs": "^1.0.0",
+        "html-webpack-plugin": "2",
+        "open": "^6.3.0"
+    },
+    "devDependencies": {
+        "autoprefixer": "^6.3.3",
+        "babel-core": "^6.4.5",
+        "babel-loader": "^6.2.1",
+        "babel-plugin-component": "^1.1.1",
+        "babel-plugin-transform-decorators-legacy": "^1.3.5",
+        "babel-plugin-transform-runtime": "^6.0.0",
+        "babel-preset-es2015": "^6.24.1",
+        "babel-preset-stage-0": "^6.5.0",
+        "clean-webpack-plugin": "^0.1.15",
+        "copy-webpack-plugin": "^4.0.1",
+        "css-loader": "^0.23.1",
+        "extract-text-webpack-plugin": "^2.1.0",
+        "file-loader": "^0.8.4",
+        "happypack": "^3.0.3",
+        "json-loader": "^0.5.4",
+        "less": "^2.7.1",
+        "less-loader": "^2.2.3",
+        "open": "0.0.5",
+        "postcss-initial": "^1.5.1",
+        "postcss-loader": "^0.9.1",
+        "style-loader": "^0.16.0",
+        "url-loader": "^0.5.7",
+        "vue-loader": "^11.2.0",
+        "webpack": "^2.2.6",
+        "webpack-dev-server": "^2.7.2"
+    }
 }
