--- a/chrome-plugin/manifest.json
+++ b/chrome-plugin/manifest.json
@@ -1,23 +1,32 @@
 {
     "name": "书签搜索神器",
-    "manifest_version": 2,
+    "manifest_version": 3,
     "version": "1.0",
     "description": "书签搜索神器",
-    "browser_action": {
+    "action": {
         "default_icon": "images/book.png",
         "default_title": "我是书签搜索神器",
-        "default_popup": "popup.html"
+        "default_popup": "popup.html",
+        "icons": {
+            "192": "images/book.png"
+        }
     },
     "icons": {
         "16": "images/book.png",
         "48": "images/book.png",
-        "128": "images/book.png"
+        "128": "images/book.png",
+        "192": "images/book.png"
     },
     "permissions": [
         "tabs",
         "bookmarks",
-        "chrome://favicon/*",
-        "http://*.google.com/",
-        "unlimitedStorage"
-    ]
+        "favicon",
+        "storage"
+    ],
+    "host_permissions": [
+        "*://*/*"
+    ],
+    "content_security_policy": {
+        "extension_pages": "script-src 'self'; object-src 'self'"
+    }
 }
